--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,84 @@
 body {
-    background-color: #fafafa;
+    background-color: black;
+    color: white;
 }
 
-.App {
+.wrapper {
+    padding: 2em;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.flex {
+    display: flex;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.flex-grow {
+    flex-grow: 1;
+}
+
+.align-start {
+    align-items: flex-start;
+}
+
+.justify-space-between {
+    justify-content: space-between;
+}
+
+.title {
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    font-size: 2.5em;
+    line-height: 1.25;
+    font-weight: 900;
+    margin-top: -0.25em;
+    margin-bottom: 0.5em;
+}
+
+.logo {
+    width: 6em;
+}
+
+.shaker-wrapper {
+    height: 100%;
+    width: 100%;
+    position: relative;
+}
+
+.shaker {
     width: 100%;
     height: 100%;
     overflow: hidden;
+    background-image: url(./gird.svg);
+    background-size: 12vmin 12vmin;
+    background-position: center center;
+    border: 2px solid white;
+}
+
+.subtitle p {
+    margin-top: 1em;
+    margin-bottom: 0;
 }
 
 .label-box {
-    background-color:  #fafafa;
+    background-color:  black;
     padding: 1em;
-    font-weight: bold;
+    border: 1px solid white;
 }
 
 .label-box p {
     margin: 0;
-    font-size: 1.25rem;
-    white-space: pre-wrap;
+    font-size: 1em;
+}
+
+.label-box p:first-child {
+    font-weight: bold;
+    font-size: 2.25em;
 }
 
 .notice {
