--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,39 @@
 body {
     background-color: black;
     color: white;
+    font-family: Arial, Helvetica, 'Noto Sans TC', sans-serif;
 }
 
 .wrapper {
-    padding: 2em;
     height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
+}
+
+header {
+    padding: 2em;
+    padding-bottom: 0;
+}
+
+main {
+    padding: 0 2em;
+    position: relative;
+}
+
+footer {
+    padding: 2em;
+    padding-top: 0;
+}
+
+footer .cht {
+    font-weight: 500;
+    letter-spacing: 0.1em;
+}
+
+footer .eng {
+    font-weight: 700;
+    letter-spacing: 0.02em;
 }
 
 .flex {
@@ -30,8 +56,20 @@ body {
     justify-content: space-between;
 }
 
+.proj-code {
+    font-family: 'Arial Black', Arial, Helvetica, sans-serif;
+    position: absolute;
+    top: -0.75em;
+    right: 0.5em;
+    font-size: 15vmin;
+    line-height: 1em;
+    font-weight: 900;
+    color: black;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: white;
+}
+
 .title {
-    font-family: Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     font-size: 2.5em;
     line-height: 1.25;
@@ -48,15 +86,16 @@ body {
     height: 100%;
     width: 100%;
     position: relative;
+    background-image: url(./gird.svg);
+    background-size: 12vmin 12vmin;
+    background-position: center center;
 }
 
 .shaker {
     width: 100%;
     height: 100%;
+    position: relative;
     overflow: hidden;
-    background-image: url(./gird.svg);
-    background-size: 12vmin 12vmin;
-    background-position: center center;
     border: 2px solid white;
 }
 
@@ -89,4 +128,6 @@ body {
 
 .notice button {
     font-size: 1.5rem;
+    color: white;
+    background: #000;
 }
